# hackstreetboys-ai-agent

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.shop  README.md  deploy_mcp.sh  deploy_shop.sh  pyproject.toml  query.py  requirements.txt  run.py  run_shop_a2a.py
docs/: demo-script.md  submission-deck.md
hackstreetboys_ai/: __init__.py  agent.py  prompt.py
mcp_server/: database.py  server.py
shop_agent/: __init__.py  agent.py  prompt.py
