[project]
name = "cohort1-hackathon-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.135.3",
    "google-adk[a2a,vertexai]>=1.28.1",
    "mcp>=1.27.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.44.0",
]
